<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="35dp"
    android:background="#DEAA5D">

    <!-- Título de la tarea -->
    <TextView
    android:id="@+id/titleTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_label"
    android:textColor="@android:color/black"
    android:textSize="20sp"
    android:layout_marginBottom="12dp"/>

    <!-- EditText para el título de la tarea -->
    <EditText
    android:id="@+id/titleEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/title_hint"
    android:padding="16dp"
    android:background="@android:color/white"
    android:textColor="@android:color/black"
    android:textSize="14sp"
    android:layout_marginBottom="20dp" />

    <!-- Descripción de la tarea -->
    <TextView
    android:id="@+id/descriptionTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/description_label"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:layout_marginBottom="12dp" />

    <!-- EditText para la descripción de la tarea -->
    <EditText
    android:id="@+id/descriptionEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/description_hint"
    android:padding="16dp"
    android:background="@android:color/white"
    android:textColor="@android:color/black"
    android:textSize="14sp"
    android:minLines="4"
        android:layout_marginBottom="20dp" />

    <!-- Fecha de vencimiento de la tarea -->
    <TextView
    android:id="@+id/dueDateTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/due_date_label"
    android:background="#ffff"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:layout_marginBottom="20dp"/>

    <!-- Prioridad de la tarea -->
    <TextView
    android:id="@+id/priorityTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/priority_label"
    android:background="#ffff"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:layout_marginBottom="20dp"/>

    <!-- Imagen para mostrar desde la API -->
    <ImageView
    android:id="@+id/taskImageView"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_marginBottom="24dp"
    android:scaleType="centerCrop" />

    <!-- Botón de guardar cambios -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="3dp"
        android:text="@string/save_button_label" />

</LinearLayout>
